# SnipJet

./: .gitignore  .mcp.json  package-lock.json  package.json  vite.config.js
src/: expander.html  index.html  reader.html  settings.html
src-tauri/: Cargo.toml  tauri.conf.json  text_expand.yaml
src-tauri/capabilities/: default.json
src-tauri/clipboard/: mod.rs
src-tauri/core/: history.rs
src-tauri/icons/: icon.icns
src-tauri/permissions/: default.toml
src-tauri/scripts/: insert_to_office.ps1
src-tauri/src/: clipboard_manager.rs  commands.rs  lib.rs  main.rs
src-tauri/src/clipboard/: mod.rs  monitor.rs
src-tauri/src/common/: globals.rs  mod.rs  models.rs
src-tauri/src/core/: ast.rs  data_store.rs  database.rs  generator.rs  markdown_parser.rs  mod.rs  mouse_listener.rs  text_expand.rs
src-tauri/src/generators/: docx_generator.rs  html_generator.rs  mod.rs  office_automation.rs
src-tauri/src/mcp/: mod.rs  server.rs  service.rs  types.rs
src/common/: icon.css  style.css
src/components/clipboard-history/: clipboard-history.js  clipboard-item.css  clipboard-item.js
src/components/empty-state/: empty-state.css  empty-state.js
src/components/frames/: preview-frame.css  text-frame.css  text-frame.html
src/config/: settings.json
src/services/: clipboard-service.js  settings-service.js  shortcut-service.js  tauri-api.js  theme-service.js  window-service.js
src/utils/: content-parser.js  formatter.js  logger.js
src/views/expander/: expander.css  expander.js
src/views/main/: index.css  main.js  navigation.js  titlebar.js
src/views/reader/: reader.css  reader.js
src/views/settings/: handlers.js  main.js  settings.css  shortcuts.js  ui.js
